# pico-framework

./: .coveragerc  .gitignore  AGENTS.md  CHANGELOG.md  CLAUDE.md  CONTRIBUTING.md  Dockerfile.integration  Makefile  README.md  SECURITY.md  mkdocs.yml  pyproject.toml  tox.ini
.github/ISSUE_TEMPLATE/: bug_report.yml  feature_request.yml
.github/workflows/: ci.yml  docs.yml  publish-to-pypi.yml
docs/: README.md  api-reference.md  architecture.md  configuration.md  creating-plugins.md  ecosystem.md  faq.md  getting-started.md  plugins.md  requirements.txt  skills.md  troubleshooting.md
docs/how-to/: custom-entry-points.md  selective-plugins.md  testing.md
examples/full-stack/: README.md  application.yaml  requirements.txt
examples/full-stack/myapp/: config.py  main.py  services.py
releases/: v0.1.0.md
src/pico_boot/: __init__.py  _version.py
src/pico_stack/: __init__.py  _version.py
src/pico_stack.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
tests/: __init__.py  conftest.py  test_boot_integration.py  test_exports.py  test_init.py  test_integration.py  test_module_utils.py  test_plugin_discovery.py  test_stack_integration.py
